--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="./assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>Paper Dashboard PRO by Creative Tim</title>
+	<title>Badge-Ma :: SW-Maestro Project</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -31,66 +31,6 @@
 	<script src="bundle.js"></script>
 
 	<div class="wrapper">
-	    <div class="sidebar" data-background-color="brown" data-active-color="danger">
-	    <!--
-			Tip 1: you can change the color of the sidebar's background using: data-background-color="white | brown"
-			Tip 2: you can change the color of the active button using the data-active-color="primary | info | success | warning | danger"
-		-->
-			<div class="logo">
-				<a href="http://www.creative-tim.com" class="simple-text">
-					Creative Tim
-				</a>
-			</div>
-			<div class="logo logo-mini">
-				<a href="http://www.creative-tim.com" class="simple-text">
-					Ct
-				</a>
-			</div>
-	    	<div class="sidebar-wrapper">
-				<div class="user">
-	                <div class="photo">
-	                    <img src="../assets/img/faces/face-2.jpg" />
-	                </div>
-	                <div class="info">
-	                    <a data-toggle="collapse" href="#collapseExample" class="collapsed">
-	                        Chet Faker
-	                        <b class="caret"></b>
-	                    </a>
-	                    <div class="collapse" id="collapseExample">
-	                        <ul class="nav">
-	                            <li><a href="#profile">My Profile</a></li>
-	                            <li><a href="#edit">Edit Profile</a></li>
-	                            <li><a href="#settings">Settings</a></li>
-	                        </ul>
-	                    </div>
-	                </div>
-	            </div>
-	            <ul class="nav">
-					<li>
-	                    <a data-toggle="collapse" href="#dashboardOverview">
-	                        <i class="ti-panel"></i>
-	                        <p>Collapse
-                                <b class="caret"></b>
-                            </p>
-	                    </a>
-                        <div class="collapse" id="dashboardOverview">
-							<ul class="nav">
-								<li><a href="#panda">Collapse 1</a></li>
-								<li><a href="#panda">Collapse2</a></li>
-							</ul>
-						</div>
-	                </li>
-
-	                <li>
-	                    <a href="calendar.html">
-	                        <i class="ti-calendar"></i>
-	                        <p>Simple Link</p>
-	                    </a>
-	                </li>
-
-	            </ul>
-	    	</div>
-	    </div>
 
 	    <div class="main-panel">
 	        <nav class="navbar navbar-default">
@@ -161,91 +101,65 @@
 	            </div>
 	        </div>
 
-	        <footer class="footer">
-	            <div class="container-fluid">
-	                <nav class="pull-left">
-	                    <ul>
-	                        <li>
-	                            <a href="http://www.creative-tim.com">
-	                                Creative Tim
-	                            </a>
-	                        </li>
-	                        <li>
-	                            <a href="http://blog.creative-tim.com">
-	                               Blog
-	                            </a>
-	                        </li>
-	                        <li>
-	                            <a href="http://www.creative-tim.com/license">
-	                                Licenses
-	                            </a>
-	                        </li>
-	                    </ul>
-	                </nav>
-	                <div class="copyright pull-right">
-	                    &copy; <script>document.write(new Date().getFullYear())</script>, made with <i class="fa fa-heart heart"></i> by <a href="http://www.creative-tim.com">Creative Tim</a>
-	                </div>
-	            </div>
-	        </footer>
 	    </div>
 	</div>
 </body>
 
 	<!--   Core JS Files. Extra: PerfectScrollbar + TouchPunch libraries inside jquery-ui.min.js   -->
-	<script src="../assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-	<script src="../assets/js/jquery-ui.min.js" type="text/javascript"></script>
-	<script src="../assets/js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="./assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+	<script src="./assets/js/jquery-ui.min.js" type="text/javascript"></script>
+	<script src="./assets/js/bootstrap.min.js" type="text/javascript"></script>
 
 	<!--  Forms Validations Plugin -->
-	<script src="../assets/js/jquery.validate.min.js"></script>
+	<script src="./assets/js/jquery.validate.min.js"></script>
 
 	<!--  Plugin for Date Time Picker and Full Calendar Plugin-->
-	<script src="../assets/js/moment.min.js"></script>
+	<script src="./assets/js/moment.min.js"></script>
 
 	<!--  Date Time Picker Plugin is included in this js file -->
-	<script src="../assets/js/bootstrap-datetimepicker.js"></script>
+	<script src="./assets/js/bootstrap-datetimepicker.js"></script>
 
 	<!--  Select Picker Plugin -->
-	<script src="../assets/js/bootstrap-selectpicker.js"></script>
+	<script src="./assets/js/bootstrap-selectpicker.js"></script>
 
 	<!--  Checkbox, Radio, Switch and Tags Input Plugins -->
-	<script src="../assets/js/bootstrap-checkbox-radio-switch-tags.js"></script>
+	<script src="./assets/js/bootstrap-checkbox-radio-switch-tags.js"></script>
 
 	<!-- Circle Percentage-chart -->
-	<script src="../assets/js/jquery.easypiechart.min.js"></script>
+	<script src="./assets/js/jquery.easypiechart.min.js"></script>
 
 	<!--  Charts Plugin -->
-	<script src="../assets/js/chartist.min.js"></script>
+	<script src="./assets/js/chartist.min.js"></script>
 
 	<!--  Notifications Plugin    -->
-	<script src="../assets/js/bootstrap-notify.js"></script>
+	<script src="./assets/js/bootstrap-notify.js"></script>
 
 	<!-- Sweet Alert 2 plugin -->
-	<script src="../assets/js/sweetalert2.js"></script>
+	<script src="./assets/js/sweetalert2.js"></script>
 
 	<!-- Vector Map plugin -->
-	<script src="../assets/js/jquery-jvectormap.js"></script>
+	<script src="./assets/js/jquery-jvectormap.js"></script>
 
 	<!--  Google Maps Plugin    -->
 	<script src="https://maps.googleapis.com/maps/api/js"></script>
 
 	<!-- Wizard Plugin    -->
-	<script src="../assets/js/jquery.bootstrap.wizard.min.js"></script>
+	<script src="./assets/js/jquery.bootstrap.wizard.min.js"></script>
 
 	<!--  Bootstrap Table Plugin    -->
-	<script src="../assets/js/bootstrap-table.js"></script>
+	<script src="./assets/js/bootstrap-table.js"></script>
 
 	<!--  Plugin for DataTables.net  -->
-	<script src="../assets/js/jquery.datatables.js"></script>
+	<script src="./assets/js/jquery.datatables.js"></script>
 
 	<!--  Full Calendar Plugin    -->
-	<script src="../assets/js/fullcalendar.min.js"></script>
+	<script src="./assets/js/fullcalendar.min.js"></script>
 
 	<!-- Paper Dashboard PRO Core javascript and methods for Demo purpose -->
-	<script src="../assets/js/paper-dashboard.js"></script>
+	<script src="./assets/js/paper-dashboard.js"></script>
 
 	<!-- Paper Dashboard PRO DEMO methods, don't include it in your project! -->
-	<script src="../assets/js/demo.js"></script>
+	<script src="./assets/js/demo.js"></script>
 
 	<script type="text/javascript">
     	$(document).ready(function(){
