--- a/public/index.html
+++ b/public/index.html
@@ -30,22 +30,6 @@
 	<div id="root"></div>
 	<script src="bundle.js"></script>
 
-	<div class="wrapper">
-
-	    <div class="main-panel">
-
-	        <div class="content">
-	            <div class="container-fluid">
-	                <div class="row">
-
-						<!-- your content here -->
-
-	                </div>
-	            </div>
-	        </div>
-
-	    </div>
-	</div>
 </body>
 
 	<!--   Core JS Files. Extra: PerfectScrollbar + TouchPunch libraries inside jquery-ui.min.js   -->
@@ -108,6 +92,17 @@
     	$(document).ready(function(){
         	demo.initChartsPage();
     	});
+	</script>
+
+	<script type="text/javascript">
+		$().ready(function(){
+			demo.checkFullPageBackgroundImage();
+
+			setTimeout(function(){
+				// after 1000 ms we add the class animated to the login/register card
+				$('.card').removeClass('card-hidden');
+			}, 700)
+		});
 	</script>
 
 </html>
