--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="./assets/img/favicon.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="./assets/img/apple-icon.png"/>
+	<link rel="icon" type="image/png" sizes="96x96" href="./assets/img/favicon.png"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
 	<title>Badge-Ma :: SW-Maestro Project</title>
@@ -20,9 +20,9 @@
 
 
     <!--  Fonts and icons     -->
-    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
-    <link href="./assets/css/themify-icons.css" rel="stylesheet">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet"/>
+    <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'/>
+    <link href="./assets/css/themify-icons.css" rel="stylesheet"/>
 </head>
 
 <body>
@@ -84,25 +84,5 @@
 
 	<!-- Paper Dashboard PRO Core javascript and methods for Demo purpose -->
 	<script src="./assets/js/paper-dashboard.js"></script>
-
-	<!-- Paper Dashboard PRO DEMO methods, don't include it in your project! -->
-	<script src="./assets/js/demo.js"></script>
-
-	<script type="text/javascript">
-    	$(document).ready(function(){
-        	demo.initChartsPage();
-    	});
-	</script>
-
-	<script type="text/javascript">
-		$().ready(function(){
-			demo.checkFullPageBackgroundImage();
-
-			setTimeout(function(){
-				// after 1000 ms we add the class animated to the login/register card
-				$('.card').removeClass('card-hidden');
-			}, 700)
-		});
-	</script>
 
 </html>
