--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,8 @@
     <!--  Paper Dashboard core CSS    -->
     <link href="./assets/css/paper-dashboard.css" rel="stylesheet"/>
 
+	<!--  CSS for Demo Purpose, don't include it in your project     -->
+	<link href="./assets/css/demo.css" rel="stylesheet" />
 
     <!--  Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet"/>
@@ -81,5 +83,19 @@
 
 	<!-- Paper Dashboard PRO Core javascript and methods for Demo purpose -->
 	<script src="./assets/js/paper-dashboard.js"></script>
+
+	<!-- Paper Dashboard PRO DEMO methods, don't include it in your project! -->
+	<script src="./assets/js/demo.js"></script>
+
+	<script type="text/javascript">
+		$().ready(function(){
+			demo.checkFullPageBackgroundImage();
+
+			setTimeout(function(){
+				// after 1000 ms we add the class animated to the login/register card
+				$('.card').removeClass('card-hidden');
+			}, 700)
+		});
+	</script>
 
 </html>
